Project

General

Profile

Actions

Bug #22063

closed

Regexp timeout accepts NaN and disables timeout

Bug #22063: Regexp timeout accepts NaN and disables timeout

Added by afurm (Andrii Furmanets) 4 months ago. Updated 4 months ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 4.1.0dev (2026-05-11T07:56:09Z master d0ea61cb87) +PRISM [arm64-darwin25]
[ruby-core:125456]

Description

Regexp.timeout= and Regexp.new(..., timeout:) currently accept Float::NAN.
The value passes the positive-timeout validation because NaN <= 0 is false, and
then double2hrtime stores it as a zero timeout value.

This makes both APIs behave as if no timeout was configured:

p Regexp.new("foo", timeout: Float::NAN).timeout
#=> nil

Regexp.timeout = Float::NAN
p Regexp.timeout
#=> nil

Float::NAN is not a valid positive timeout value, so I expect it to raise
ArgumentError, the same as 0 and negative values.

Reproduced on master:

ruby 4.1.0dev (2026-05-11T07:56:09Z master d0ea61cb87) +PRISM [arm64-darwin25]

Proposed fix:

Reject NaN in the shared regexp timeout validation helper before converting the
double to rb_hrtime_t.

Pull request: https://github.com/ruby/ruby/pull/16917

Updated by hsbt (Hiroshi SHIBATA) 4 months ago 1Actions #1 [ruby-core:125457]

FYI: I deleted duplicated issues like #22061 and 22062

Updated by afurm (Andrii Furmanets) 4 months ago Actions #2 [ruby-core:125459]

Thank you, I had some issues publishing so it might be that case.

Updated by afurm (Andrii Furmanets) 4 months ago Actions #3

  • Status changed from Open to Closed

Applied in changeset git|d7ef97204d907561eb67828382f7bb17397313c6.


[Bug #22063] Reject NaN Regexp timeout values

Actions

Also available in: PDF Atom