[Bug #22063] Reject NaN Regexp timeout values